# strangling-hand-backend

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_articles.py
app/application/service/: notifications_service.py
app/application/use_cases/: articles.py  auth.py  subscribes.py  users.py
app/domain/exceptions/: base.py
app/domain/interface/: logger.py  token.py
app/domain/models/: articles.py  models.py
app/domain/repositories/: base.py  uow.py
app/infrastructure/config/: config.py
app/infrastructure/database/: base.py  dependencies.py  engine.py  uow.py
app/infrastructure/database/orm/: models.py
app/infrastructure/database/repositories/: articles.py  base.py  notification.py  vpn.py
app/infrastructure/email/: service.py
app/infrastructure/logging/: adapter.py  context.py  filters.py  graylog_handler.py  setup.py
app/infrastructure/security/: jwt.py  password.py
app/presentation/fastapi/: dependencies.py  main.py
app/presentation/fastapi/middleware/: exception.py  request_id.py
app/presentation/fastapi/routers/: articles.py  auth.py  free_vpn.py  ping.py  subscribes.py  users.py
app/presentation/fastapi/schemas/: articles.py  schemas.py
compose/: docker-compose.yml
nginx/conf.d/: deafult.conf
