[project]
name = "strangling-hand-backend"
version = "0.2.0"
description = "vpn access management service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pwdlib[bcrypt]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pygelf>=0.4.3",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.12",
]
